crates/strider/tests/snapshots/v3__arm__floats__f64_compare.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v6" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v6" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v7" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "5" -> "v7" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "9" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v7" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v11" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v11" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "10" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "9" -> "10" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" -> "10" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "14" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v11" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "14" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "20" -> "15" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "20" [label="init\nd1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="init\nd0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="arg[1] ← r1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="φ r0", shape=house, fillcolor="#163030"];
  "14" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "21" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="φ r0", shape=house, fillcolor="#163030"];
  "9" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" [label="arg[0] ← r0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "16" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "25" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "35" -> "33" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "33" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x1c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "39" -> "37" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "39" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "40" -> "39" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "41" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "42" -> "41" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "43" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "20" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "40" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "45" -> "40" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "46" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "19" -> "47" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "48" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1d:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "52" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "54" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "44" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "58" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "58" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Equal\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "62" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "65" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "64" [label="ZeroExtend\nu8 → u32", shape=box, fillcolor="#2d2d2d"];
  "66" -> "64" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "66" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "67" -> "66" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "67" [label="Less\nf64 → bool", shape=box, fillcolor="#1a3020"];
  "47" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "68" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0xfffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "68" [label="init\nfpscr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "70" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "70" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "70" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Truncate\nu32 → u8", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "33" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "76" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="const 0x1e:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="And:bool", shape=box, fillcolor="#2d2d2d"];
  "77" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "78" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "28" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "79" -> "77" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "79" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "72" -> "79" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v2" -> "80" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "81" -> "80" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "81" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "80" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "19" -> "80" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "20" -> "80" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "4" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "28" -> "4" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
}
